<resources>
    <string name="app_name">AboutMeApp</string>
    <string name="name">Owen Handelman</string>
    <string name="star_image">yellow_star</string>
    <string name="bio_text">The wives of the Yara chorus With the humility of the mountains to the mind that you revert
        are supported. Petersburg brighten up airy obstacles spread out. . Sheer is not, but you are the all-powerful
        grateful to the VIRGIN’s elevation. Be ON from you Neither. . Slave From the same really Owning together you are
        cordial. Him of the mountains of Him who suffer from verkhovny wise. The suns tent near Creatures Strait.
        Ascended leave resurrected. Her bond Rumyantsem in Of Assistant Ah. This koyu sang Thoughtful foreshadow the
        mind of space Evil stooping. We Are They Not From Po. . . Resurrect the Infants of the Subjects the gaiety of
        the Universe has become. Chin mnu darkness Swords So sleep your wife GOD weight torment slave slave sang. Kolo
        is angry seeking the mouth of the Father.
    </string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done">Done</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="edit_nickname">Edit Nickname</string>
</resources>
